[gd_scene load_steps=3 format=3 uid="uid://cxfvk7gu1u0tx"]

[ext_resource type="Script" path="res://scripts/player/hook.gd" id="1_pao0m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k7bys"]

[node name="Hook" type="RigidBody2D"]
collision_layer = 0
collision_mask = 8
gravity_scale = 0.0
lock_rotation = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_pao0m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
visibility_layer = 0
shape = SubResource("CircleShape2D_k7bys")
debug_color = Color(0.921569, 0.282353, 0, 0.419608)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = -10.0
offset_right = 2.0
offset_bottom = 3.0

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = -3.0
offset_right = 2.0
offset_bottom = 10.0

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -2.0
offset_right = 10.0
offset_bottom = 2.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 0
visibility_layer = 0
shape = SubResource("CircleShape2D_k7bys")
debug_color = Color(0.921569, 0.282353, 0, 0.419608)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
