[gd_scene load_steps=5 format=3 uid="uid://dsrafscpjd7bh"]

[ext_resource type="Script" path="res://scripts/player/hook.gd" id="1_wixvt"]
[ext_resource type="Texture2D" uid="uid://iljkfmy7rlv3" path="res://art/player/chain.png" id="2_x1fiu"]
[ext_resource type="Texture2D" uid="uid://b4lmopeyqr2cq" path="res://art/player/swing_hook_tip.png" id="3_5sgth"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mayf5"]

[node name="Area2D" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_wixvt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mayf5")

[node name="Chain" type="Sprite2D" parent="."]
texture_repeat = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_x1fiu")
centered = false
offset = Vector2(0, -40)
region_enabled = true
region_rect = Rect2(0, 23.485, 668.88, 81.719)

[node name="HookTip" type="Sprite2D" parent="."]
texture_filter = 1
rotation = -1.5708
scale = Vector2(1.48, 1.48)
texture = ExtResource("3_5sgth")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
